# voiceguard

./: .gitignore  DATA_SOURCING.md  DISCLOSURE.md  ERRATA.md  LICENSE  OSPO_SUBMISSION.md  PAPER.md  PAPER_OUTLINE.md  README.md  RESULTS.md  STAGE2.md  TODO.md  VENUE.md  app.py  brev_setup.sh  check.py  cli.py  demo.py  pyproject.toml  requirements-acoustic.txt  requirements-app.txt  requirements.txt
.claude/skills/transcribe-audio-for-voiceguard/: SKILL.md
data/: acoustic_degrade_m2.json  acoustic_degrade_m3.json  acoustic_events.json  acoustic_events_m1.json  acoustic_events_m2.json  acoustic_events_m3.json  degrade_m4.json  dialogues.json  events_m1_600.json  events_m2_600.json  events_m4.json
demo/: voiceguard_demo.html
examples/: benign_turns.json  scam_turns.json
experiments/: make_figures.py  stage1_mechanism.py  stage1_robustness.py  stage2_degrade.py  stage2_harden.py  stage2_real.py  stage2_roc.py  stage2_run.py
paper/: README.md  main.tex  references.bib
remote/: score_acoustic.py  score_degrade.py
scripts/: fetch_samples.py  remote_setup.sh  score_local.py  transcribe.py
tests/: test_voiceguard.py
voiceguard/: __init__.py  assess.py  detect.py  evaluate.py  fusion.py  intent.py  realsignals.py  simulate.py
